--- a/bayesian/ag/get_scores.ipynb
+++ b/bayesian/ag/get_scores.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a2c9a808",
    "metadata": {
     "tags": []
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5f9c3c68-b2ca-45df-a15d-33bb9f52a2f6",
    "metadata": {
     "tags": []
@@ -46,19 +46,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uniqueness: 0.9754\n"
+      "uniqueness: 0.9395\n"
      ]
     }
    ],
    "source": [
     "# Check uniqueness of generated molecules\n",
-    "_, uniqueness_rate = get_uniqueness_rate(\"ag_guidance_best_w.sdf\")\n",
-    "print(\"uniqueness:\", mol_stability)"
+    "_, uniqueness_rate = get_uniqueness_rate(\"ag_guidance_best_w.sdf\", n_raw=10000)\n",
+    "print(\"uniqueness:\", uniqueness_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "abc8be97-ffeb-4f14-9f58-a8ddd0946450",
    "metadata": {
     "tags": []
@@ -68,13 +68,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rdkit_valid: 0.995\n"
+      "rdkit_valid: 0.9932\n"
      ]
     }
    ],
    "source": [
     "# Check rdkit valid results\n",
-    "rdkit_valid = get_rdkit_valid(\"ag_guidance_best_w.sdf\") \n",
+    "rdkit_valid = get_rdkit_valid(\"ag_guidance_best_w.sdf\", n_mols=10000)\n",
     "print(\"rdkit_valid:\", rdkit_valid)"
    ]
   }
