--- a/bayesian/cfg/get_scores.ipynb
+++ b/bayesian/cfg/get_scores.ipynb
@@ -45,13 +45,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uniqueness: 0.9633\n"
+      "uniqueness: 0.9493\n"
      ]
     }
    ],
    "source": [
-    "_, uniqueness_rate = get_uniqueness_rate(\"cfg_guidance_best_w.sdf\")\n",
-    "print(\"uniqueness:\", mol_stability)"
+    "_, uniqueness_rate = get_uniqueness_rate(\"cfg_guidance_best_w.sdf\", n_raw=10000)\n",
+    "print(\"uniqueness:\", uniqueness_rate)"
    ]
   },
   {
@@ -66,12 +66,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rdkit_valid: 0.983\n"
+      "rdkit_valid: 0.9883\n"
      ]
     }
    ],
    "source": [
-    "rdkit_valid = get_rdkit_valid(\"cfg_guidance_best_w.sdf\") \n",
+    "rdkit_valid = get_rdkit_valid(\"cfg_guidance_best_w.sdf\", n_mols=10000)\n",
     "print(\"rdkit_valid:\", rdkit_valid)"
    ]
   },
