--- a/bayesian/mg/get_scores.ipynb
+++ b/bayesian/mg/get_scores.ipynb
@@ -24,7 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stability: 0.9793\n"
+      "stability: 0.9772\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3bd6d97b-a24b-4813-9f24-bd02ae6ec326",
    "metadata": {
     "tags": []
@@ -45,18 +45,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uniqueness: 0.9793\n"
+      "uniqueness: 0.9494\n"
      ]
     }
    ],
    "source": [
-    "_, uniqueness_rate = get_uniqueness_rate(\"mg_guidance_best_w.sdf\")\n",
-    "print(\"uniqueness:\", mol_stability)"
+    "_, uniqueness_rate = get_uniqueness_rate(\"mg_guidance_best_w.sdf\", n_raw=10000)\n",
+    "print(\"uniqueness:\", uniqueness_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fd9e51e9-9103-4d81-bfe9-5fec9b8ce0a7",
    "metadata": {
     "tags": []
@@ -66,12 +66,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rdkit_valid: 0.994\n"
+      "rdkit_valid: 0.9921\n"
      ]
     }
    ],
    "source": [
-    "rdkit_valid = get_rdkit_valid(\"mg_guidance_best_w.sdf\") \n",
+    "rdkit_valid = get_rdkit_valid(\"mg_guidance_best_w.sdf\", n_mols=10000)\n",
     "print(\"rdkit_valid:\", rdkit_valid)"
    ]
   },
