--- a/bayesian/vanilla/get_scores.ipynb
+++ b/bayesian/vanilla/get_scores.ipynb
@@ -14,17 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d3369727-ea28-414b-9f7c-de672e9afb31",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[18:59:04] Both bonds on one end of an atropisomer are on the same side - atoms are: 4 7\n",
+      "[18:59:04] Both bonds on one end of an atropisomer are on the same side - atoms are: 2 3\n",
+      "[18:59:04] Both bonds on one end of an atropisomer are on the same side - atoms are: 6 8\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stability: 0.978\n"
+      "stability: 0.9822294022617124\n"
      ]
     }
    ],
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "3bd6d97b-a24b-4813-9f24-bd02ae6ec326",
    "metadata": {
     "tags": []
@@ -45,18 +54,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uniqueness: 0.978\n"
+      "uniqueness: 0.9485\n"
      ]
     }
    ],
    "source": [
-    "_, uniqueness_rate = get_uniqueness_rate(\"vanilla.sdf\")\n",
-    "print(\"uniqueness:\", mol_stability)"
+    "_, uniqueness_rate = get_uniqueness_rate(\"vanilla.sdf\", n_raw=10000)\n",
+    "print(\"uniqueness:\", uniqueness_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fd9e51e9-9103-4d81-bfe9-5fec9b8ce0a7",
    "metadata": {
     "tags": []
@@ -66,12 +75,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rdkit_valid: 0.995\n"
+      "rdkit_valid: 0.9904\n"
      ]
     }
    ],
    "source": [
-    "rdkit_valid = get_rdkit_valid(\"vanilla.sdf\") \n",
+    "rdkit_valid = get_rdkit_valid(\"vanilla.sdf\", n_mols=10000) \n",
     "print(\"rdkit_valid:\", rdkit_valid)"
    ]
   },
